# deadlyze-app

./: .gitignore  LICENSE.md  README.md  index.html  package.json
deadlock-api-scripts/: .gitignore  Cargo.toml  README.md  badge_distribution.rs  batch_mmr.rs  batch_steam_profile.rs  live_match_players.rs  patch_notes.rs  player_match_history.rs
deadlock-assets-api-scripts/: Cargo.toml  README.md  hero_by_id.rs  item_by_id.rs  ranks.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: main.rs  match_parser.rs  utils.rs
src-tauri/src/app/: filesystem.rs  mod.rs  shortcuts.rs  state.rs  window.rs
src-tauri/src/commands/: match_commands.rs  mod.rs
src-tauri/src/game/: deadlock.rs  mod.rs  steam.rs
src-tauri/src/handlers/: mod.rs  shortcut_handler.rs  window_handler.rs
src-tauri/src/match_parser/: constants.rs  display.rs  mod.rs  network.rs  types.rs  utils.rs  visitor.rs
src/components/ActiveMatchPage/: MatchTable.tsx  PartyBrackets.tsx  TableHeader.tsx  TeamTable.tsx  tableConfig.ts
src/components/ActiveMatchPage/MatchCard/: MatchCard.tsx  MatchCardContext.tsx  MatchCardPortal.tsx  index.ts
src/components/ActiveMatchPage/MatchHistoryPanel/: MatchHistoryPanel.tsx  index.ts
src/components/ActiveMatchPage/MatchSearchInput/: MatchSearchInput.tsx
src/components/ActiveMatchPage/RateLimitIndicator/: RateLimitIndicator.tsx  index.ts
src/components/HomePage/LaunchHeader/: LaunchHeader.tsx
src/components/Layout/PageContainer/: PageContainer.tsx
src/components/Layout/Sidebar/: Sidebar.tsx
src/components/PageContainer/: PageContainer.tsx
src/components/Settings/SettingItem/: SettingItem.tsx
src/components/Settings/SettingsModal/: SettingsModal.tsx
src/components/Settings/ShortcutInput/: ShortcutInput.tsx
src/components/SettingsModal/: SettingItem.tsx  SettingsModal.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/WindowControls/: WindowControls.tsx
src/constants/: animations.ts  apiConstants.ts  index.ts  playerTagConstants.ts  styles.ts  uiConstants.ts
src/hooks/: index.ts  useGlitchEffect.ts
src/i18n/: config.ts
src/i18n/locales/: en.json  ru.json
src/pages/ActiveMatchPage/: ActiveMatchPage.tsx
src/pages/HomePage/: HomePage.tsx
src/services/: AssetsService.ts  CacheService.ts  MatchCacheService.ts  MatchHistoryService.ts  MatchService.ts  PartyService.ts  PlayerDataService.ts  SteamService.ts  index.ts
src/types/: settings.ts
src/utils/: configManager.ts  shortcutManager.ts  steamUtils.ts
