[package]
name = "deadlock-api-scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "batch_steam_profile"
path = "batch_steam_profile.rs"

[[bin]]
name = "patch_notes"
path = "patch_notes.rs"

[[bin]]
name = "badge_distribution"
path = "badge_distribution.rs"

[[bin]]
name = "batch_mmr"
path = "batch_mmr.rs"

[[bin]]
name = "live_match_players"
path = "live_match_players.rs"

[[bin]]
name = "player_match_history"
path = "player_match_history.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "http2", "gzip", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
haste = { git = "https://github.com/deadlock-api/haste.git", rev = "51722e61b184fc9f7ad32fad5887092017a59d92" }
