[package]
name = "deadlock-assets-api-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "hero_by_id"
path = "hero_by_id.rs"

[[bin]]
name = "item_by_id"
path = "item_by_id.rs"

[[bin]]
name = "ranks"
path = "ranks.rs"
