[package]
name = "deadlyze-app"
version = "0.0.14"
description = "A Tauri app for Deadlock game statistics"
authors = ["DeadLyze"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
