[package]
name = "deadlyze-app"
version = "0.1.8"
description = "A Tauri app for Deadlock game statistics"
authors = ["DeadLyze"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "http2", "gzip", "native-tls"] }
tokio = { version = "1", features = ["full"] }
haste = { git = "https://github.com/deadlock-api/haste.git", branch = "main" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
